# LibraryAPI

./: Dockerfile  Jenkinsfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test-results.xml
alembic/: env.py
alembic/versions/: 2025_05_16_1916-92e751d225f7_initial_tables.py  2025_05_16_2023-e079efae6331_initial_tables.py  2025_05_16_2259-f790c44b08d3_changed_bookmodel_published_at_from_.py  2025_05_17_1237-5f2df3c904cd_updated_returned_at_in_borrowed_books_.py
config/: .env.example  config.py
database/: base.py  db_helper.py
database/models/: BookModel.py  BorrowedBooksTable.py  ReaderModel.py  UserModel.py  __init__.py
src/auth/: dependencies.py  schemas.py  utils.py  views.py
src/books/: schemas.py  utils.py  views.py
src/borrow/: schemas.py  utils.py  views.py
src/readers/: schemas.py  utils.py  views.py
tests/: conftest.py  test_auth.py  test_books.py  test_readers.py
